@@ -21,10 +21,10 @@ network.bipartite(x, g, ignore.eval = TRUE, names.eval = NULL, ...)
   \item{g}{ an object of class \code{network} }
   \item{ignore.eval}{ logical; ignore edge value information in x? }
   \item{names.eval}{ a name for the edge attribute under which to store edge values, if any }
-  \item{\dots}{ additional arguments to \code{\link{add.edges}} }
+  \item{\dots}{ possible additional arguments (such as \code{edge.check}) }
 }
 \details{
-  Each of the above functions takes a \code{network} and a matrix as input, and modifies the supplied \code{network} object by adding the appropriate edges.  \code{network.adjacency} takes \code{x} to be an adjacency matrix; \code{code.edgelist} takes \code{x} to be an edgelist matrix; and \code{network.incidence} takes \code{x} to be an incidence matrix.  \code{network.bipartite} takes \code{x} to be a two-mode adjacency matrix where rows and columns reflect each respective mode (conventionally, actors and events); If \code{ignore.eval==FALSE}, (non-zero) edge values are stored as edgewise attributes with name \code{names.eval}.  Any additional command line parameters are passed to \code{\link{add.edge}}.
+  Each of the above functions takes a \code{network} and a matrix as input, and modifies the supplied \code{network} object by adding the appropriate edges.  \code{network.adjacency} takes \code{x} to be an adjacency matrix; \code{code.edgelist} takes \code{x} to be an edgelist matrix; and \code{network.incidence} takes \code{x} to be an incidence matrix.  \code{network.bipartite} takes \code{x} to be a two-mode adjacency matrix where rows and columns reflect each respective mode (conventionally, actors and events); If \code{ignore.eval==FALSE}, (non-zero) edge values are stored as edgewise attributes with name \code{names.eval}.  The \code{edge.check} argument can be added via \code{\dots} and will be passed to \code{\link{add.edges}}.
 
   Edgelist matrices to be used with \code{network.edgelist} should have one row per edge, with the first two columns indicating the sender and receiver of each edge (respectively).  Edge values may be provided in additional columns. The edge attributes will be created with names corresponding to the column names unless alternate names are provided via \code{names.eval}. The vertices specified in the first two columns, which can be characters, are added to the network in default sort order. The edges are added in the order specified by the edgelist matrix.
   
